@@ -5,6 +5,9 @@ class NewsItemItem(adapters.BaseItem):
     
     @property
     def body(self):
-        return self.context.getImage() and self.context.getImage().tag() + \
-               self.context.CookedBody() or self.context.CookedBody()
-
+        if self.context.getImage():
+            return '<a href="%s">%s</a>%s' % (self.context.getImage().absolute_url(), 
+                                              self.context.restrictedTraverse('image_mini').tag(),
+                                              self.context.CookedBody())
+        else:
+            return self.context.CookedBody()
